# tone-craft-ai

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_api.py
agents/: __init__.py  graph.py  nodes.py  state.py
backend/: __init__.py  api_client.py  parser.py
config/: __init__.py  settings.py
database/: __init__.py  db.py
frontend/: __init__.py  components.py  styles.py
